--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
-{
-  "name": "zfs",
+{ "name": "zfs",
   "description": "Node library for interacting with ZFS utilities",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "Joyent (joyent.com)",
   "main": "lib/zfs.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "./run-tests",
+    "test": "./run-tests"
   }
 }
