--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
-[submodule "async-testing"]
-	path = async-testing
-	url = http://github.com/bentomas/node-async-testing.git
+[submodule "deps/restdown"]
+	path = deps/restdown
+	url = git://github.com/trentm/restdown.git
+[submodule "deps/javascriptlint"]
+	path = deps/javascriptlint
+	url = git://github.com/davepacheco/javascriptlint.git
+[submodule "deps/jsstyle"]
+	path = deps/jsstyle
+	url = git://github.com/davepacheco/jsstyle.git
