--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
 	"scripts": {
 		"test": "./node_modules/.bin/tap ./test"
 	},
-        "engines": { "node": ">=0.8" }
+        "engines": { "node": ">=0.8" },
+        "license": "MPL-2.0"
 }
