--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 	"author": "Joyent (joyent.com)",
 	"private": true,
 	"main": "lib/zfs.js",
+	"dependencies": {
+		"assert-plus": "^1.0.0"
+	},
 	"devDependencies": {
 		"tap": "0.2"
 	},
