--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "zfs",
 	"description": "Node library for interacting with ZFS utilities",
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"author": "Joyent (joyent.com)",
 	"private": true,
 	"main": "lib/zfs.js",
@@ -11,6 +11,8 @@
 	"scripts": {
 		"test": "./node_modules/.bin/tap ./test"
 	},
-        "engines": { "node": ">=0.8" },
-        "license": "MPL-2.0"
+	"engines": {
+		"node": ">=0.8"
+	},
+	"license": "MPL-2.0"
 }
